<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ac_accept">Accept</string>
    <string name="ac_add_new_tag">add new tag <b>‘{name_of_tag}‘</b></string>
    <string name="ac_authenticate">Sign up or sign in</string>
    <string name="ac_cancel">Cancel</string>
    <string name="ac_clear">Clear</string>
    <string name="ac_clear_cache">Clear cache</string>
    <string name="ac_close_app">Close app</string>
    <string name="ac_continue">Continue</string>
    <string name="ac_continue_editing">Continue Editing</string>
    <string name="ac_continue_signed_out">Skip sign in</string>
    <string name="ac_copy">@string/ic_copy</string>
    <string name="ac_create_new_cache">Create new cache</string>
    <string name="ac_discard_changes">Discard Changes</string>
    <string name="ac_get_help">Get Help</string>
    <string name="ac_got_it_caps">GOT IT</string>
    <string name="ac_highlight">@string/ic_highlight</string>
    <string name="ac_install">Install</string>
    <string name="ac_login">Log in</string>
    <string name="ac_logout">Log out</string>
    <string name="ac_maybe_later">Maybe later</string>
    <string name="ac_next">Next</string>
    <string name="ac_no">No</string>
    <string name="ac_no_thanks">No thanks</string>
    <string name="ac_ok">OK</string>
    <string name="ac_previous">Previous</string>
    <string name="ac_retry">Retry</string>
    <string name="ac_save">Save</string>
    <string name="ac_save_to_pocket">Save to Pocket</string>
    <string name="ac_select_all">Select All</string>
    <string name="ac_share">Share</string>
    <string name="ac_submit">Submit</string>
    <string name="ac_translate">Translate</string>
    <string name="ac_try_again">Try Again</string>
    <string name="ac_undo">UNDO</string>
    <string name="ac_web_search">Web Search</string>
    <string name="ac_write_review">Review</string>
    <string name="ac_yes">Yes</string>
    <string name="add_note_hint">Note</string>
    <string name="add_note_title">Add Note</string>
    <string name="add_note_title_hint">Title (optional)</string>
    <string name="add_overlay_free_title">Saved to Pocket!</string>
    <string name="add_tags_list_empty_body">"Tags make it easier to find your items again using search or filters from Saves.

To create a tag, enter one above."</string>
    <string name="add_tags_list_empty_title">Get organized with Tags</string>
    <string name="add_url_error">Please enter a valid URL</string>
    <string name="add_url_hint">e.g. https://getpocket.com</string>
    <string name="add_url_note_hint">Note (optional)</string>
    <string name="add_url_title">Add URL</string>
    <string name="alpha_settings">Alpha Settings</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Support</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appcenter_distribute_dialog_actioned_on_disabled_toast" />
    <string name="appcenter_distribute_download_progress_number_format" />
    <string name="appcenter_distribute_downloading_error" />
    <string name="appcenter_distribute_downloading_mandatory_update" />
    <string name="appcenter_distribute_downloading_update" />
    <string name="appcenter_distribute_install" />
    <string name="appcenter_distribute_install_ready_message" />
    <string name="appcenter_distribute_install_ready_title" />
    <string name="appcenter_distribute_notification_category" />
    <string name="appcenter_distribute_unknown_sources_dialog_message" />
    <string name="appcenter_distribute_unknown_sources_dialog_settings" />
    <string name="appcenter_distribute_update_dialog_download" />
    <string name="appcenter_distribute_update_dialog_message_mandatory" />
    <string name="appcenter_distribute_update_dialog_message_optional" />
    <string name="appcenter_distribute_update_dialog_postpone" />
    <string name="appcenter_distribute_update_dialog_title" />
    <string name="appcenter_distribute_update_dialog_view_release_notes" />
    <string name="appcenter_distribute_update_failed_dialog_ignore" />
    <string name="appcenter_distribute_update_failed_dialog_message" />
    <string name="appcenter_distribute_update_failed_dialog_reinstall" />
    <string name="appcenter_distribute_update_failed_dialog_title" />
    <string name="authentication_legal_disclaimer">"By proceeding, you agree to the:  
Pocket [Terms of Service](https://getpocket.com/tos) and [Privacy Notice](https://getpocket.com/privacy)"</string>
    <string name="bg_offline_cache_is_missing_m">Your offline cache cannot be found. Please make sure that your offline storage location properly connected. If you rearranged or modified the caches files, please restore them and try again.</string>
    <string name="bg_offline_cache_is_missing_t">Offline Content Inaccessible</string>
    <string name="bg_offline_cache_storage_is_unavailable_m">"The storage location your offline cache is saved on is currently unavailable. This can happen if your device is connected to a computer via USB, if you removed the storage card, or if you revoked Pocket's Storage permission. Please undo this change and try again. Otherwise you can switch to a new cache in Pocket's Internal Storage."</string>
    <string name="bg_offline_cache_storage_is_unavailable_t">Offline Content Inaccessible</string>
    <string name="blanco">Blanco</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clipboard_label_url">Link copied from Pocket</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="collection_details_error_message">Pocket had trouble loading this Collection. Please try again later.</string>
    <string name="collection_details_error_title">Could not load Collection</string>
    <string name="com_braze_api_key">0278f437-a723-4289-8f42-358ac1eda226</string>
    <string name="com_braze_custom_endpoint">sdk.iad-05.braze.com</string>
    <string name="com_braze_feed_connection_error_body">"Cannot establish network connection.
Please try again later."</string>
    <string name="com_braze_feed_connection_error_title">Connection Error</string>
    <string name="com_braze_feed_empty">"We have no updates.
Please check again later."</string>
    <string name="com_braze_firebase_cloud_messaging_sender_id">638773995762</string>
    <string name="com_braze_image_is_read_tag_key">com_appboy_image_is_read_tag_key</string>
    <string name="com_braze_image_lru_cache_image_url_key">com_braze_image_lru_cache_image_url_key</string>
    <string name="empty_list_tagged_action">How to tag</string>
    <string name="empty_list_tagged_message">Tag your saves by topic to find them later.</string>
    <string name="empty_list_tagged_title">Organize your list</string>
    <string name="lb_sort_by">Sort by</string>
    <string name="lb_sort_by_longest">Longest to read</string>
    <string name="lb_sort_by_shortest">Shortest to read</string>
    <string name="long_reads">Long Reads</string>
    <string name="my_list_filter_filter">Filter</string>
    <string name="not_viewed">Not Viewed</string>
    <string name="report_item_dialog_title">Report a Concern</string>
    <string name="report_item_hint">Tell us more</string>
    <string name="report_item_option_1">The title, link, or image is broken</string>
    <string name="report_item_option_2">"It's in the wrong category"</string>
    <string name="report_item_option_3">"It's sexually explicit"</string>
    <string name="report_item_option_4">"It's rude, vulgar, or offensive"</string>
    <string name="report_item_option_5">It contains misinformation</string>
    <string name="report_item_option_6">Other</string>
    <string name="setting_account_management">Account management</string>
    <string name="setting_delete_account">Delete account</string>
    <string name="setting_delete_account_cancel_premium">To delete your account, you must first <b><annotation link="https://help.getpocket.com/article/986-canceling-your-pocket-premium-subscription">cancel your Premium subscription here</annotation></b>.</string>
    <string name="setting_delete_account_header">Delete your account</string>
    <string name="setting_delete_account_permanently_delete">You understand your Pocket account and data will be <b>permanently deleted</b>.</string>
    <string name="setting_delete_account_warning">Warning: this can’t be undone</string>
    <string name="short_reads">Short Reads</string>
    <string name="theme_toggle_auto_desc">Change theme automatically</string>
    <string name="theme_toggle_dark_desc">Change to dark theme</string>
    <string name="theme_toggle_light_desc">Change to light theme</string>
    <string name="viewed">Viewed</string>
</resources>