<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/menu_highlight" android:title="@string/ac_highlight" app:showAsAction="always" />
    <item android:icon="@drawable/toolbar_share" android:id="@id/menu_share" android:title="@string/ac_share" app:showAsAction="always" />
    <item android:icon="@drawable/ic_content_copy_black_24dp" android:id="@id/menu_copy" android:title="@string/ac_copy" app:showAsAction="always" />
    <item android:icon="@drawable/ic_g_translate_black_24dp" android:id="@id/menu_translate" android:title="@string/ac_translate" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/toolbar_search" android:id="@id/menu_web_search" android:title="@string/ac_web_search" app:showAsAction="ifRoom" />
    <item android:id="@id/menu_select_all" android:title="@string/ac_select_all" app:showAsAction="ifRoom" />
</menu>