<?xml version="1.0" encoding="utf-8"?>
<com.pocket.ui.view.themed.ThemedLinearLayout android:orientation="vertical" android:tag="layout/frag_sort_filter_bottom_sheet_0" android:background="@drawable/bg_bottom_sheet" android:paddingBottom="40.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.pocket.ui.view.themed.ThemedLinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingTop="20.0dip" android:paddingBottom="11.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.pocket.ui.view.button.IconButton android:layout_width="22.0dip" android:layout_height="20.0dip" android:src="@drawable/ic_filter" android:tint="@color/pkt_themed_grey_5" android:layout_marginStart="29.0dip" />
        <com.pocket.ui.view.themed.ThemedTextView android:textSize="16.0sp" android:textColor="@color/pkt_themed_grey_5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/my_list_filter_filter" android:layout_marginStart="19.0dip" />
    </com.pocket.ui.view.themed.ThemedLinearLayout>
    <com.pocket.ui.view.checkable.CheckableTextView android:textSize="16.0sp" android:textColor="@color/pkt_themed_grey_1" android:gravity="center_vertical" android:id="@id/viewed" android:tag="binding_1" android:background="@drawable/pkt_checkable_text_view_background" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/viewed" android:paddingStart="68.0dip" />
    <com.pocket.ui.view.checkable.CheckableTextView android:textSize="16.0sp" android:textColor="@color/pkt_themed_grey_1" android:gravity="center_vertical" android:id="@id/notViewed" android:tag="binding_2" android:background="@drawable/pkt_checkable_text_view_background" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/not_viewed" android:paddingStart="68.0dip" />
    <com.pocket.ui.view.checkable.CheckableTextView android:textSize="16.0sp" android:textColor="@color/pkt_themed_grey_1" android:gravity="center_vertical" android:id="@id/shortReads" android:tag="binding_3" android:background="@drawable/pkt_checkable_text_view_background" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/short_reads" android:paddingStart="68.0dip" />
    <com.pocket.ui.view.checkable.CheckableTextView android:textSize="16.0sp" android:textColor="@color/pkt_themed_grey_1" android:gravity="center_vertical" android:id="@id/longReads" android:tag="binding_4" android:background="@drawable/pkt_checkable_text_view_background" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/long_reads" android:paddingStart="68.0dip" />
    <com.pocket.ui.view.themed.ThemedLinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingTop="20.0dip" android:paddingBottom="11.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.pocket.ui.view.button.IconButton android:layout_width="18.0dip" android:layout_height="16.0dip" android:src="@drawable/ic_pkt_sort_line" android:tint="@color/pkt_themed_grey_5" android:layout_marginStart="29.0dip" />
        <com.pocket.ui.view.themed.ThemedTextView android:textSize="16.0sp" android:textColor="@color/pkt_themed_grey_5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lb_sort_by" android:layout_marginStart="21.0dip" />
    </com.pocket.ui.view.themed.ThemedLinearLayout>
    <com.pocket.ui.view.checkable.CheckableTextView android:textSize="16.0sp" android:textColor="@color/pkt_themed_grey_1" android:gravity="center_vertical" android:id="@id/newest" android:tag="binding_5" android:background="@drawable/pkt_checkable_text_view_background" android:layout_width="fill_parent" android:layout_height="40.0dip" android:paddingStart="68.0dip" />
    <com.pocket.ui.view.checkable.CheckableTextView android:textSize="16.0sp" android:textColor="@color/pkt_themed_grey_1" android:gravity="center_vertical" android:id="@id/oldest" android:tag="binding_6" android:background="@drawable/pkt_checkable_text_view_background" android:layout_width="fill_parent" android:layout_height="40.0dip" android:paddingStart="68.0dip" />
    <com.pocket.ui.view.checkable.CheckableTextView android:textSize="16.0sp" android:textColor="@color/pkt_themed_grey_1" android:gravity="center_vertical" android:id="@id/shortest" android:tag="binding_7" android:background="@drawable/pkt_checkable_text_view_background" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/lb_sort_by_shortest" android:paddingStart="68.0dip" />
    <com.pocket.ui.view.checkable.CheckableTextView android:textSize="16.0sp" android:textColor="@color/pkt_themed_grey_1" android:gravity="center_vertical" android:id="@id/longest" android:tag="binding_8" android:background="@drawable/pkt_checkable_text_view_background" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/lb_sort_by_longest" android:paddingStart="68.0dip" />
</com.pocket.ui.view.themed.ThemedLinearLayout>