<?xml version="1.0" encoding="utf-8"?>
<com.pocket.ui.view.themed.ThemedNestedScrollView android:tag="layout/activity_delete_account_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.pocket.ui.view.themed.ThemedConstraintLayout2 android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.pocket.ui.view.AppBar android:id="@id/appBar" android:layout_width="0.0dip" android:layout_height="wrap_content" android:title="@string/setting_account_management" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:leftIcon="close" />
        <com.pocket.ui.view.themed.ThemedTextView android:id="@id/header" android:paddingTop="@dimen/pkt_space_lg" android:paddingBottom="@dimen/pkt_space_md" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/setting_delete_account_header" android:paddingStart="@dimen/pkt_space_md" android:paddingEnd="@dimen/pkt_space_md" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/appBar" style="@style/Pkt_Text_Large_Title" />
        <com.pocket.ui.view.themed.ThemedTextView android:id="@id/warning" android:paddingTop="@dimen/pkt_space_md" android:paddingBottom="@dimen/pkt_space_sm" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/setting_delete_account_warning" android:paddingStart="@dimen/pkt_space_md" android:paddingEnd="@dimen/pkt_space_md" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/header" style="@style/Pkt_Text_Title" />
        <com.pocket.ui.view.button.CheckBox android:id="@id/cancelPremiumCheckbox" android:tag="binding_1" android:layout_height="@dimen/pkt_icon_button_width" android:layout_marginStart="@dimen/pkt_side_sm" app:layout_constraintBottom_toBottomOf="@id/cancelPremiumLabel" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/cancelPremiumLabel" style="@style/Pkt_IconButton" />
        <com.pocket.ui.view.themed.ThemedTextView android:id="@id/cancelPremiumLabel" android:tag="binding_2" android:paddingTop="@dimen/pkt_space_sm" android:paddingBottom="@dimen/pkt_space_sm" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/setting_delete_account_cancel_premium" android:paddingEnd="@dimen/pkt_space_md" android:paddingVertical="@dimen/pkt_space_sm" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/cancelPremiumCheckbox" app:layout_constraintTop_toBottomOf="@id/warning" style="@style/Pkt_Text_Small_Medium" />
        <com.pocket.ui.view.button.CheckBox android:id="@id/permanentlyDeleteCheckbox" android:layout_height="@dimen/pkt_icon_button_width" android:layout_marginStart="@dimen/pkt_side_sm" app:layout_constraintBottom_toBottomOf="@id/permanentlyDeleteLabel" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/permanentlyDeleteLabel" style="@style/Pkt_IconButton" />
        <com.pocket.ui.view.themed.ThemedTextView android:id="@id/permanentlyDeleteLabel" android:paddingTop="@dimen/pkt_space_sm" android:paddingBottom="@dimen/pkt_space_sm" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/setting_delete_account_permanently_delete" android:paddingEnd="@dimen/pkt_space_md" android:paddingVertical="@dimen/pkt_space_sm" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/permanentlyDeleteCheckbox" app:layout_constraintTop_toBottomOf="@id/cancelPremiumLabel" style="@style/Pkt_Text_Small_Medium" />
        <com.pocket.ui.view.button.ErrorButton android:id="@id/deleteButton" android:tag="binding_3" android:layout_width="0.0dip" android:layout_height="52.0dip" android:layout_marginLeft="@dimen/pkt_space_sm" android:layout_marginTop="@dimen/pkt_space_lg" android:layout_marginRight="@dimen/pkt_space_sm" android:text="@string/setting_delete_account" android:layout_marginHorizontal="@dimen/pkt_space_sm" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/permanentlyDeleteLabel" />
        <com.pocket.ui.view.themed.ThemedTextView android:gravity="center" android:id="@id/cancelButton" android:padding="@dimen/pkt_space_sm" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/pkt_space_sm" android:text="@string/ac_cancel" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/deleteButton" style="@style/Pkt_Text_Small_Link_Bold" />
    </com.pocket.ui.view.themed.ThemedConstraintLayout2>
</com.pocket.ui.view.themed.ThemedNestedScrollView>