<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.pocket.ui.view.checkable.CheckableImageView android:gravity="center" android:id="@id/theme_light" android:background="@drawable/pkt_ripple_borderless" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/pkt_side_grid" android:scaleType="center" android:minHeight="@dimen/min_touch_target" android:layout_weight="1.0" android:contentDescription="@string/theme_toggle_light_desc" app:srcCompat="@drawable/ic_pkt_theme_light" />
    <com.pocket.ui.view.checkable.CheckableImageView android:gravity="center" android:id="@id/theme_dark" android:background="@drawable/pkt_ripple_borderless" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/pkt_side_grid" android:scaleType="center" android:minHeight="@dimen/min_touch_target" android:layout_weight="1.0" android:contentDescription="@string/theme_toggle_dark_desc" app:srcCompat="@drawable/ic_pkt_theme_dark" />
    <com.pocket.ui.view.checkable.CheckableImageView android:gravity="center" android:id="@id/theme_auto" android:background="@drawable/pkt_ripple_borderless" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/pkt_side_grid" android:scaleType="center" android:minHeight="@dimen/min_touch_target" android:layout_weight="1.0" android:contentDescription="@string/theme_toggle_auto_desc" app:srcCompat="@drawable/ic_pkt_theme_auto" />
</merge>