<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:tag="layout/frag_report_item_bottom_sheet_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.pocket.ui.view.themed.ThemedLinearLayout android:orientation="vertical" android:id="@id/rootLayout" android:background="@drawable/bg_bottom_sheet" android:paddingTop="20.0dip" android:paddingBottom="40.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="16.0dip" android:paddingEnd="16.0dip">
        <com.pocket.ui.view.themed.ThemedTextView android:textSize="12.0sp" android:textColor="@color/pkt_themed_grey_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/report_item_dialog_title" android:fontFamily="@font/graphik" />
        <com.pocket.ui.view.themed.ThemedConstraintLayout android:tag="binding_1" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.pocket.ui.view.themed.ThemedRadioButton android:gravity="center_vertical" android:id="@id/brokenRadioButton" android:tag="binding_2" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/btn_radio" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <com.pocket.ui.view.themed.ThemedTextView android:gravity="center_vertical" android:duplicateParentState="true" android:layout_width="0.0dip" android:layout_height="54.0dip" android:text="@string/report_item_option_1" android:layout_marginStart="@dimen/pkt_side_grid" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/brokenRadioButton" app:layout_constraintTop_toTopOf="parent" style="@style/Pkt_Text_Medium" />
        </com.pocket.ui.view.themed.ThemedConstraintLayout>
        <com.pocket.ui.view.themed.ThemedConstraintLayout android:tag="binding_3" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.pocket.ui.view.themed.ThemedRadioButton android:gravity="center_vertical" android:id="@id/wrongCategoryRadioButton" android:tag="binding_4" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/btn_radio" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <com.pocket.ui.view.themed.ThemedTextView android:gravity="center_vertical" android:duplicateParentState="true" android:layout_width="0.0dip" android:layout_height="54.0dip" android:text="@string/report_item_option_2" android:layout_marginStart="@dimen/pkt_side_grid" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/wrongCategoryRadioButton" app:layout_constraintTop_toTopOf="parent" style="@style/Pkt_Text_Medium" />
        </com.pocket.ui.view.themed.ThemedConstraintLayout>
        <com.pocket.ui.view.themed.ThemedConstraintLayout android:tag="binding_5" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.pocket.ui.view.themed.ThemedRadioButton android:gravity="center_vertical" android:id="@id/sexuallyExplicitRadioButton" android:tag="binding_6" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/btn_radio" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <com.pocket.ui.view.themed.ThemedTextView android:gravity="center_vertical" android:duplicateParentState="true" android:layout_width="0.0dip" android:layout_height="54.0dip" android:text="@string/report_item_option_3" android:layout_marginStart="@dimen/pkt_side_grid" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/sexuallyExplicitRadioButton" app:layout_constraintTop_toTopOf="parent" style="@style/Pkt_Text_Medium" />
        </com.pocket.ui.view.themed.ThemedConstraintLayout>
        <com.pocket.ui.view.themed.ThemedConstraintLayout android:tag="binding_7" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.pocket.ui.view.themed.ThemedRadioButton android:gravity="center_vertical" android:id="@id/offensiveRadioButton" android:tag="binding_8" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/btn_radio" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <com.pocket.ui.view.themed.ThemedTextView android:gravity="center_vertical" android:duplicateParentState="true" android:layout_width="0.0dip" android:layout_height="54.0dip" android:text="@string/report_item_option_4" android:layout_marginStart="@dimen/pkt_side_grid" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/offensiveRadioButton" app:layout_constraintTop_toTopOf="parent" style="@style/Pkt_Text_Medium" />
        </com.pocket.ui.view.themed.ThemedConstraintLayout>
        <com.pocket.ui.view.themed.ThemedConstraintLayout android:tag="binding_9" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.pocket.ui.view.themed.ThemedRadioButton android:gravity="center_vertical" android:id="@id/misinformationRadioButton" android:tag="binding_10" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/btn_radio" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <com.pocket.ui.view.themed.ThemedTextView android:gravity="center_vertical" android:duplicateParentState="true" android:layout_width="0.0dip" android:layout_height="54.0dip" android:text="@string/report_item_option_5" android:layout_marginStart="@dimen/pkt_side_grid" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/misinformationRadioButton" app:layout_constraintTop_toTopOf="parent" style="@style/Pkt_Text_Medium" />
        </com.pocket.ui.view.themed.ThemedConstraintLayout>
        <com.pocket.ui.view.themed.ThemedConstraintLayout android:tag="binding_11" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.pocket.ui.view.themed.ThemedRadioButton android:gravity="center_vertical" android:id="@id/otherRadioButton" android:tag="binding_12" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/btn_radio" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <com.pocket.ui.view.themed.ThemedTextView android:gravity="center_vertical" android:duplicateParentState="true" android:layout_width="0.0dip" android:layout_height="54.0dip" android:text="@string/report_item_option_6" android:layout_marginStart="@dimen/pkt_side_grid" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/otherRadioButton" app:layout_constraintTop_toTopOf="parent" style="@style/Pkt_Text_Medium" />
        </com.pocket.ui.view.themed.ThemedConstraintLayout>
        <com.pocket.ui.view.edittext.PktEditText android:id="@id/otherEditText" android:tag="binding_13" android:layout_width="fill_parent" android:layout_height="120.0dip" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:hint="@string/report_item_hint" />
        <com.pocket.ui.view.button.SubmitButton android:id="@id/submitButton" android:tag="binding_14" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/ac_submit" />
    </com.pocket.ui.view.themed.ThemedLinearLayout>
</androidx.core.widget.NestedScrollView>