<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/splitGuide" android:layout_width="0.0dip" android:layout_height="0.0dip" app:layout_constraintGuide_percent="0.05" />
    <com.pocket.ui.view.themed.ThemedImageView android:id="@id/image" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/ic_empty_list" android:layout_marginStart="@dimen/pkt_space_md" android:layout_marginEnd="@dimen/pkt_space_md" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/splitGuide" />
    <com.pocket.ui.view.themed.ThemedTextView android:textSize="28.0sp" android:textStyle="bold" android:textColor="@color/pkt_text_primary" android:gravity="center_horizontal" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/empty_list_tagged_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/image" />
    <com.pocket.ui.view.themed.ThemedTextView android:textSize="19.0sp" android:textColor="@color/pkt_text_primary" android:gravity="center" android:id="@id/message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/empty_list_tagged_message" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title" />
    <com.pocket.ui.view.button.BoxButton android:id="@id/button" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginTop="30.0dip" android:text="@string/empty_list_tagged_action" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/message" />
</androidx.constraintlayout.widget.ConstraintLayout>